--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="408dp"
-        android:layout_height="36dp"
+        android:layout_height="48dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
-            app:srcCompat="@drawable/backarrow" />
+            app:srcCompat="@drawable/backarrow"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Space
             android:layout_width="243dp"
@@ -75,7 +76,12 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
+            android:minHeight="48dp"
             android:text="Name" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
 
         <TextView
             android:id="@+id/textView6"
@@ -89,7 +95,7 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:background="@color/black" />
 
         <EditText
             android:id="@+id/taskDescription"
@@ -98,43 +104,59 @@
             android:ems="10"
             android:gravity="start|top"
             android:hint="This is where you write the description"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:minHeight="48dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Due Date:" />
+            android:text="Due Date:"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:background="@color/black" />
 
         <EditText
             android:id="@+id/taskDueDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="date" />
+            android:hint="Click to choose the due date"
+            android:inputType="date"
+            android:minHeight="48dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Assign:" />
+            android:text="Assign:"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/divider4"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:background="@color/black" />
 
         <HorizontalScrollView
             android:id="@+id/taskAssign"
             android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_height="45dp"
+            android:contentDescription="Assign Friends">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -142,22 +164,30 @@
                 android:orientation="vertical" />
         </HorizontalScrollView>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp" />
+
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Category:" />
+            android:text="Category:"
+            android:textColor="#000000"
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/divider5"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:background="@color/black" />
 
         <Spinner
             android:id="@+id/taskCategories"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:contentDescription="Task Categories"
+            android:minHeight="48dp" />
 
     </LinearLayout>
 
@@ -170,11 +200,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.205" />
+        app:layout_constraintVertical_bias="0.109" />
 
     <LinearLayout
         android:layout_width="409dp"
-        android:layout_height="78dp"
+        android:layout_height="79dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,6 +218,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
+            android:contentDescription="Friends"
             app:srcCompat="@drawable/ic_baseline_groups_24" />
 
         <Space
@@ -201,6 +232,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
+            android:contentDescription="Tasks"
             app:srcCompat="@drawable/ic_baseline_check_24" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
