--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -96,8 +96,8 @@
         app:layout_constraintVertical_bias="0.181" />
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="73dp"
+        android:layout_width="410dp"
+        android:layout_height="79dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +111,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
+            android:contentDescription="Friends"
             app:srcCompat="@drawable/ic_baseline_groups_24" />
 
         <Space
@@ -124,6 +125,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#FFFFFF"
+            android:contentDescription="Tasks"
             app:srcCompat="@drawable/ic_baseline_check_24" />
     </LinearLayout>
 
