--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".AddTaskActivity">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Task Page"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,9 +63,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.113">
+        app:layout_constraintVertical_bias="0.125">
 
         <androidx.constraintlayout.widget.Barrier
             android:layout_width="match_parent"
@@ -77,7 +80,8 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:text="Name" />
+            android:text="Name"
+            android:textColor="#000000" />
 
         <Space
             android:layout_width="match_parent"
@@ -105,7 +109,8 @@
             android:gravity="start|top"
             android:hint="This is where you write the description"
             android:inputType="textMultiLine"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textColorHint="#717171" />
 
         <Space
             android:layout_width="match_parent"
@@ -125,14 +130,15 @@
             android:layout_height="1dp"
             android:background="@color/black" />
 
-        <EditText
+        <TextView
             android:id="@+id/taskDueDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:gravity="center_vertical"
             android:hint="Click to choose the due date"
-            android:inputType="date"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:onClick="showDatePickerDialog"
+            android:textSize="18sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -191,48 +197,56 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider6"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.109" />
-
     <LinearLayout
         android:layout_width="409dp"
-        android:layout_height="79dp"
-        android:orientation="horizontal"
+        android:layout_height="90dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider6">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <ImageButton
-            android:id="@+id/imageButton6"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
-            android:contentDescription="Friends"
-            app:srcCompat="@drawable/ic_baseline_groups_24" />
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black" />
 
-        <Space
-            android:layout_width="145dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider6"
+            app:layout_constraintVertical_bias="0.833">
 
-        <ImageButton
-            android:id="@+id/imageButton7"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
-            android:contentDescription="Tasks"
-            app:srcCompat="@drawable/ic_baseline_check_24" />
+            <ImageButton
+                android:id="@+id/imageButton6"
+                android:layout_width="128dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#FFFFFF"
+                android:contentDescription="Friends"
+                app:srcCompat="@drawable/ic_baseline_groups_24" />
+
+            <Space
+                android:layout_width="145dp"
+                android:layout_height="59dp"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/imageButton7"
+                android:layout_width="128dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#FFFFFF"
+                android:contentDescription="Tasks"
+                app:srcCompat="@drawable/ic_baseline_check_24" />
+        </LinearLayout>
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
