--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -33,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
+        android:id="@+id/submitButton"
         android:layout_width="270sp"
         android:layout_height="50sp"
         android:layout_marginTop="20dp"
