--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
 
     <Button
-        android:id="@+id/signInButton"
+        android:id="@+id/logInButton"
         android:layout_width="240dp"
         android:layout_height="60dp"
         android:layout_marginTop="72dp"
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+        app:layout_constraintTop_toBottomOf="@+id/logInButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
