--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -163,13 +163,7 @@
             android:id="@+id/taskAssign"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:contentDescription="Assign Friends">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
-        </HorizontalScrollView>
+            android:contentDescription="Assign Friends"/>
 
         <Space
             android:layout_width="match_parent"
