--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -8,7 +8,7 @@
     tools:context=".AddTaskActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/taskPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Task Page"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/taskPageTitle"
         app:layout_constraintVertical_bias="0.012">
 
         <ImageButton
