--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.012">
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/back_btn"
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
