removed the horizontal scrollable view used for assigning friends and replaced it with a listview

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -158,11 +158,11 @@
             android:layout_height="1dp"
             android:background="@color/black" />
 
-        <HorizontalScrollView
-            android:id="@+id/taskAssign"
+        <ListView
+            android:id="@+id/taskAssignListView"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:contentDescription="Assign Friends"/>
+            android:layout_height="90dp"
+            android:choiceMode="multipleChoice" />
 
         <Space
             android:layout_width="match_parent"
