--- a/app/src/main/res/layout/activity_collective.xml
+++ b/app/src/main/res/layout/activity_collective.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".CollectiveActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -47,10 +36,11 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/createCollectiveButton"
                 android:layout_width="96dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="createCollective"
                 android:text="Create collective" />
 
             <Button
@@ -71,7 +61,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/collectiveIdEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -80,7 +70,7 @@
                 android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/sendCollectiveJoinRequestButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
