Created a package called "ui" and moved all the packages related to ui into the package

--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F7D4BE"
-    tools:context=".task.TaskOverviewActivity">
+    tools:context=".ui.task.TaskOverviewActivity">
 
     <TextView
         android:id="@+id/taskpage_tv"
