--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -5,7 +5,7 @@
     android:layout_width="320dp"
     android:layout_height="65dp"
     android:background="#FFF"
-    tools:context=".friends.FriendsActivity">
+    tools:context=".ui.friends.FriendsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
