renamed the ID of the assign members listView as it was similar to another ID in another layout

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -159,7 +159,7 @@
             android:background="@color/black" />
 
         <ListView
-            android:id="@+id/membersListView"
+            android:id="@+id/assignCollectiveMembersListView"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:choiceMode="multipleChoice" />
