--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".ui.task.AddTaskActivity">
+    tools:context=".ui.task.CreateTaskActivity">
 
     <TextView
         android:id="@+id/taskPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Task Page"
+        android:text="CREATE A NEW TASK"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -58,8 +58,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="392dp"
-        android:layout_height="524dp"
+        android:layout_width="395dp"
+        android:layout_height="537dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="32dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView6"
@@ -114,7 +114,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="32dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView7"
@@ -142,7 +142,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="32dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView8"
@@ -161,12 +161,12 @@
         <ListView
             android:id="@+id/assignCollectiveMembersListView"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="98dp"
             android:choiceMode="multipleChoice" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="32dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:id="@+id/textView9"
@@ -184,22 +184,48 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
+            android:layout_height="102dp"
+            android:orientation="vertical">
 
             <Spinner
                 android:id="@+id/taskCategories"
-                android:layout_width="207dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_width="match_parent"
+                android:layout_height="39dp" />
 
-            <Button
-                android:id="@+id/createNewCategoryButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="createNewCategory"
-                android:text="New category" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/createNewCategoryButton"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#C62828"
+                    android:text="Delete a category"
+                    android:textColor="#FFFFFF" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="26dp"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/deleteCategoryButton"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#D6D6D6"
+                    android:text="CREATE A NEW CATEGORY"
+                    android:textColor="#000000" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -222,7 +248,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="90dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
